force-app/main/default/objects/OrderItem__c/OrderItem__c.object-meta.xml
<CustomObject>
    <label>Order Product</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Order Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>