force-app/main/default/objects/OrderItem__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>