force-app/main/default/objects/OrderItem__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>